fix font size and set letter spacing

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
   padding-left: 100px;
   padding-right: 100px;
   font-family: "Lucida Sans", Verdana, sans-serif;
+  font-size: 1.3em;
 }
 
 /* Styles for Header */
@@ -14,6 +15,7 @@ header {
 header h1 {
   text-align: center;
   font-size: 54px;
+  letter-spacing: 5px;
 }
 header a {
   color: beige;
